--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
 <body>
   <center>
     <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-    <img src="./artbyluke/billboard.jpg" alt="Billboard" width="100" height="100" />
+    <img src=".artbyluke-main/Asset 4@4x.png" alt="Billboard" width="100" height="100" />
   </center>
 
   <header>
