--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
   <ul>
     <li>“MOOD RING” BY SOFIE LOPEZ - 2025</li>
-    <li>UNTITLED SECURITY CAMERA PROJECT - 2024</li>
+    <li>”AND IF NOTHING WENT WRONG” - 2024</li>
+    <li>”ORANGES” BY KIERA LYNN - 2023</li>
     <li>UNTITLED MOTION GRAPHICS PROJECT - 2023</li>
     <li>“HOLDING ON” BY 622CHAOS - 2021</li>
   </ul>
