--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <center>
     <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-    <img src=".artbyluke-main/Asset 4@4x.png" alt="Billboard" width="100" height="100" />
+  <img src="./artbyluke-main/Asset%204@4x.png" alt="Billboard" width="100" height="100" />
+
   </center>
 
   <header>
