--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +10,15 @@
 <body>
   <center>
     <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-  <img src="./artbyluke-main/Asset%204@4x.png" alt="Billboard" width="100" height="100" />
+  <img src="./artbyluke-main/Asset%204@4x.png" alt="Billboard" width="830" height="500" />
 
   </center>
 
   <header>
-    <h1 class="title">Be Here Sound</h1>
+    <h1 class="title">SELECTED WORKS</h1>
   </header>
 
-  <p>Selected digital works from <em>Luke Magette</em>.</p>
+  <p>View the following pieces from <em>Luke Magette</em>.</p>
 
   <h2>Video Works</h2>
   <p>
