--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luke Magette</title>
+  <title>Portfolio — Luke M</title>
   <link rel="stylesheet" href="style.css" />
+
+<!-- Open Graph / iMessage Preview -->
+<meta property="Title" content="Artwork Portfolio – Luke M" />
+<meta property="Description" content="Selected works and videos by Luke Magette." />
+<meta property="PreviewImage" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
 </head>
 
 <body>
