--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta property="Title" content="Artwork Portfolio – Luke M" />
 <meta property="Description" content="Selected works and videos by Luke Magette." />
 <meta property="PreviewImage" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
+<meta name="TwitterCard” content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
 </head>
 
 <body>
