--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="style.css" />
 
 <!-- Open Graph / iMessage Preview -->
-<meta property="Title" content="Artwork Portfolio – Luke M" />
-<meta property="Description" content="Selected works and videos by Luke Magette." />
-<meta property="PreviewImage" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
-<meta name="TwitterCard” content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
+<meta property="og:title" content="Artwork Portfolio – Luke M" />
+<meta property="og:description" content="Selected works and videos by Luke Magette." />
+<meta property="og:image" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
+<meta property="og:url" content="https://luke-tm.github.io/portfolio/" />
+<meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
