--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Open Graph / iMessage Preview -->
 <meta property="og:title" content="Artwork Portfolio – Luke M" />
 <meta property="og:description" content="Selected works and videos by Luke Magette." />
-<meta property="og:image" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph.jpg" />
+<meta property="og:image" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph2.jpg" />
 <meta property="og:url" content="https://luke-tm.github.io/portfolio/" />
 <meta name="twitter:card" content="summary_large_image" />
 </head>
@@ -18,7 +18,7 @@
 <body>
   <center>
     <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-  <img src="./artbyluke-main/Asset%204@4x.png" alt="Billboard" width="332" height="200" />
+  <img src="./BillboardHeader2.jpg" alt="Billboard" width="332" height="265.6" />
 
   </center>
 
