--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 
 <!-- Open Graph / iMessage Preview -->
-<meta property="og:title" content="Artwork Portfolio – Luke M" />
+<meta property="og:title" content="Creative Portfolio – Luke M" />
 <meta property="og:description" content="Selected works and videos by Luke Magette." />
 <meta property="og:image" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph2.jpg" />
 <meta property="og:url" content="https://luke-tm.github.io/portfolio/" />
