--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <center>
     <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-  <img src="./portfolio/BillboardHeader2.jpg" alt="Billboard" width="332" height="265.6" />
+  <img src="./portfolio/BillboardHeader2.jpg" alt="Billboard2" width="332" height="265.6" />
 
   </center>
 
