--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-  <center>
-    <!-- Make sure this is a real image like billboard.jpg or billboard.png -->
-<img src="BillboardHeader2.jpg" alt="Billboard" class="header-img" />
 
-  </center>
+<div style="text-align: center;">
+  <img src="BillboardHeader2.jpg" alt="Billboard" class="header-img" />
+  <p style="font-size: 0.9em;">Billboard, 2025</p>
+</div>
 
   <header>
     <h1 class="title">SELECTED WORKS</h1>
