--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<div style="text-align: center;">
+<div class="full-width-banner">
   <img src="BillboardHeader2.jpg" alt="Billboard" class="header-img" />
   <p style="font-size: 0.9em;">Billboard, 2025</p>
 </div>
