--- a/index.html
+++ b/index.html
@@ -1,64 +1,75 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio — Luke M</title>
-  <link rel="stylesheet" href="artbyluke-main/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
-<!-- Open Graph / iMessage Preview -->
-<meta property="og:title" content="Creative Portfolio – Luke M" />
-<meta property="og:description" content="Selected works and videos by Luke Magette." />
-<meta property="og:image" content="https://luke-tm.github.io/portfolio/BillboardOpenGraph2.jpg" />
-<meta property="og:url" content="https://luke-tm.github.io/portfolio/" />
-<meta name="twitter:card" content="summary_large_image" />
+  <!-- Open Graph / iMessage Preview Metadata -->
+  <meta property="og:title" content="Creative Portfolio – Luke M" />
+  <meta property="og:description" content="Selected works and videos by Luke Magette." />
+  <meta property="og:image" content="https://luke-tm.github.io/images/BillboardOpenGraph2.jpg" />
+  <meta property="og:url" content="https://luke-tm.github.io/" />
+  <meta name="twitter:card" content="summary_large_image" />
 </head>
 
 <body>
+  <!-- Header Image -->
+  <div class="full-width-banner">
+    <img src="images/BillboardHeader2.jpg" alt="Billboard" class="header-img" />
+    <p style="text-align: center;">Billboard, 2025</p>
+  </div>
 
-<div class="full-width-banner">
-  <img src="BillboardHeader2.jpg" alt="Billboard" class="header-img" />
-  <p style="font-size: 0.9em;">Billboard, 2025</p>
-</div>
-
+  <!-- Page Title -->
   <header>
     <h1 class="title">SELECTED WORKS</h1>
   </header>
 
+  <!-- Intro Paragraph -->
   <p>View the following pieces from <em>Luke Magette</em>.</p>
 
+  <!-- Video Section -->
   <h2>Video Works</h2>
   <p>
-    Brief selections below. Click here to view full list. <br>
-    Please fill out 
+    Brief selections below.
+    <!-- ✅ Link to the videos subpage -->
+    <a href="./videos/index.html">Click here to view full list</a>.
+    <br />
+    Please fill out
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link&ouid=101256742199389538713">
       this form
     </a>
     to request studio time.
   </p>
 
+  <!-- Short Teaser List -->
   <ul>
-    <li>“MOOD RING” BY SOFIE LOPEZ - 2025</li>
-    <li>”AND IF NOTHING WENT WRONG” - 2024</li>
-    <li>”ORANGES” BY KIERA LYNN - 2023</li>
-    <li>UNTITLED MOTION GRAPHICS PROJECT - 2023</li>
-    <li>“HOLDING ON” BY 622CHAOS - 2021</li>
+    <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
+    <li>“AND IF NOTHING WENT WRONG” – 2024</li>
+    <li>“ORANGES” BY KIERA LYNN – 2023</li>
+    <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
+    <li>“HOLDING ON” BY 622CHAOS – 2021</li>
   </ul>
 
+  <!-- Photography Section -->
   <h2>Selected Photography</h2>
   <p>Click here to view full selection.</p>
 
+  <!-- Events Calendar -->
   <h2>Events Calendar</h2>
-  <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5" 
-          style="border:solid 1px #777" 
-          width="600" height="300" 
-          frameborder="0" scrolling="no">
+  <iframe
+    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
+    style="border:solid 1px #777"
+    width="600" height="300"
+    frameborder="0" scrolling="no">
   </iframe>
 
+  <!-- Contact -->
   <h2>Contact</h2>
   <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
+  <!-- Navigation Links -->
   <h2>Stay Tuned via:</h2>
   <nav>
     <a href="./beheresound/xur/xur.html">XUR</a> |
@@ -67,12 +78,14 @@
     <a href="./beheresound/misc.html">Misc</a>
   </nav>
 
-  <br><br>
+  <br /><br />
 
-  <img src="./jeffersons.jpg" alt="Table at Jefferson's coffee" />
+  <!-- Image Footer -->
+  <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
 
-  <br><br>
+  <br /><br />
 
+  <!-- Blog Link -->
   <a href="./blog.html">Blog</a>
 </body>
 </html>
