--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Header Image -->
   <div class="full-width-banner">
-    <img src="images/BillboardHeader2.webp" alt="Billboard" class="header-img" />
+    <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
     <p style="text-align: center;">Billboard, 2025</p>
   </div>
 
