--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio — Luke M</title>
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Open Graph / iMessage Preview Metadata -->
+  <!-- Social sharing metadata -->
   <meta property="og:title" content="Creative Portfolio – Luke M" />
   <meta property="og:description" content="Selected works and videos by Luke Magette." />
   <meta property="og:image" content="https://luke-tm.github.io/images/BillboardOpenGraph2.jpg" />
@@ -15,35 +15,29 @@
 </head>
 
 <body>
-  <!-- Header Image -->
-  <div class="full-width-banner">
+
+  <!-- 🎯 Scaled, centered header image -->
+  <div class="image-container">
     <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
-    <p style="text-align: center;">Billboard, 2025</p>
+    <p class="caption">Billboard, 2025</p>
   </div>
 
-  <!-- Page Title -->
   <header>
     <h1 class="title">SELECTED WORKS</h1>
   </header>
 
-  <!-- Intro Paragraph -->
   <p>View the following pieces from <em>Luke Magette</em>.</p>
 
-  <!-- Video Section -->
   <h2>Video Works</h2>
   <p>
-    Brief selections below.
-    <!-- ✅ Link to the videos subpage -->
-    <a href="./videos/index.html">Click here to view full list</a>.
-    <br />
-    Please fill out
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link&ouid=101256742199389538713">
+    Brief selections below. 
+    <a href="./videos/index.html">Click here to view full list</a>.<br>
+    Please fill out 
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link">
       this form
-    </a>
-    to request studio time.
+    </a> to request studio time.
   </p>
 
-  <!-- Short Teaser List -->
   <ul>
     <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
     <li>“AND IF NOTHING WENT WRONG” – 2024</li>
@@ -52,24 +46,19 @@
     <li>“HOLDING ON” BY 622CHAOS – 2021</li>
   </ul>
 
-  <!-- Photography Section -->
   <h2>Selected Photography</h2>
   <p>Click here to view full selection.</p>
 
-  <!-- Events Calendar -->
   <h2>Events Calendar</h2>
   <iframe
     src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
-    style="border:solid 1px #777"
-    width="600" height="300"
-    frameborder="0" scrolling="no">
+    style="border:solid 1px #777" 
+    width="600" height="300" frameborder="0" scrolling="no">
   </iframe>
 
-  <!-- Contact -->
   <h2>Contact</h2>
   <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
-  <!-- Navigation Links -->
   <h2>Stay Tuned via:</h2>
   <nav>
     <a href="./beheresound/xur/xur.html">XUR</a> |
@@ -80,12 +69,11 @@
 
   <br /><br />
 
-  <!-- Image Footer -->
   <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
 
   <br /><br />
 
-  <!-- Blog Link -->
   <a href="./blog.html">Blog</a>
+
 </body>
 </html>
