--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +18,7 @@
 
   <!-- 🎯 Scaled, centered header image -->
   <div class="image-container">
-    <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
+<img src="BillboardHeader2.webp" alt="Billboard" class="header-img" style="border: 2px solid red;" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
