--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- 🎯 Scaled, centered header image -->
   <div class="image-container">
-    <img src="https://via.placeholder.com/300x200" class="header-img" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png" class="header-img" alt="Billboard" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
