--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
 
   <!-- 🎯 Scaled, centered header image -->
   <div class="image-container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png" class="header-img" alt="Billboard" />
+    <img src="images/BillboardHeader2.webp" alt="Billboard" class="header-img" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
+  <!-- Page Title -->
   <header>
     <h1 class="title">SELECTED WORKS</h1>
   </header>
 
   <p>View the following pieces from <em>Luke Magette</em>.</p>
 
+  <!-- Video Section -->
   <h2>Video Works</h2>
   <p>
     Brief selections below. 
@@ -46,19 +48,24 @@
     <li>“HOLDING ON” BY 622CHAOS – 2021</li>
   </ul>
 
+  <!-- Photography Section -->
   <h2>Selected Photography</h2>
   <p>Click here to view full selection.</p>
 
+  <!-- 🎯 Events Calendar (scaled to match page width) -->
   <h2>Events Calendar</h2>
-  <iframe
-    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
-    style="border:solid 1px #777" 
-    width="600" height="300" frameborder="0" scrolling="no">
-  </iframe>
+  <div class="calendar-container">
+    <iframe
+      src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
+      width="100%" height="300" frameborder="0" scrolling="no">
+    </iframe>
+  </div>
 
+  <!-- Contact -->
   <h2>Contact</h2>
   <p>Reach out to inquire about pricing for installation work & commissions.</p>
 
+  <!-- Links -->
   <h2>Stay Tuned via:</h2>
   <nav>
     <a href="./beheresound/xur/xur.html">XUR</a> |
@@ -69,10 +76,12 @@
 
   <br /><br />
 
+  <!-- Footer Image -->
   <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
 
   <br /><br />
 
+  <!-- Blog -->
   <a href="./blog.html">Blog</a>
 
 </body>
