--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- 🎯 Scaled, centered header image -->
   <div class="image-container">
-    <img src="images/BillboardHeader2.webp" alt="Billboard" class="header-img" />
+    <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
