--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio — Luke M</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="artbyluke-main/style.css" />
 
   <!-- Social sharing metadata -->
   <meta property="og:title" content="Creative Portfolio – Luke M" />
