--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Portfolio — Luke M</title>
   <link rel="stylesheet" href="artbyluke-main/style.css" />
 
-  <!-- Social sharing metadata -->
   <meta property="og:title" content="Creative Portfolio – Luke M" />
   <meta property="og:description" content="Selected works and videos by Luke Magette." />
   <meta property="og:image" content="https://luke-tm.github.io/images/BillboardOpenGraph2.jpg" />
@@ -16,73 +15,67 @@
 
 <body>
 
-  <!-- 🎯 Scaled, centered header image -->
-  <div class="image-container">
+  <!-- ✅ Scaled image outside text block -->
+  <div class="header-image-container">
     <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
-  <!-- Page Title -->
-  <header>
-    <h1 class="title">SELECTED WORKS</h1>
-  </header>
+  <!-- ✅ Begin constrained content -->
+  <div class="content">
+    <header>
+      <h1 class="title">SELECTED WORKS</h1>
+    </header>
 
-  <p>View the following pieces from <em>Luke Magette</em>.</p>
+    <p>View the following pieces from <em>Luke Magette</em>.</p>
 
-  <!-- Video Section -->
-  <h2>Video Works</h2>
-  <p>
-    Brief selections below. 
-    <a href="./videos/index.html">Click here to view full list</a>.<br>
-    Please fill out 
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link">
-      this form
-    </a> to request studio time.
-  </p>
+    <h2>Video Works</h2>
+    <p>
+      Brief selections below.
+      <a href="./videos/index.html">Click here to view full list</a>.<br>
+      Please fill out 
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link">
+        this form
+      </a> to request studio time.
+    </p>
 
-  <ul>
-    <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
-    <li>“AND IF NOTHING WENT WRONG” – 2024</li>
-    <li>“ORANGES” BY KIERA LYNN – 2023</li>
-    <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
-    <li>“HOLDING ON” BY 622CHAOS – 2021</li>
-  </ul>
+    <ul>
+      <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
+      <li>“AND IF NOTHING WENT WRONG” – 2024</li>
+      <li>“ORANGES” BY KIERA LYNN – 2023</li>
+      <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
+      <li>“HOLDING ON” BY 622CHAOS – 2021</li>
+    </ul>
 
-  <!-- Photography Section -->
-  <h2>Selected Photography</h2>
-  <p>Click here to view full selection.</p>
+    <h2>Selected Photography</h2>
+    <p>Click here to view full selection.</p>
 
-  <!-- 🎯 Events Calendar (scaled to match page width) -->
-  <h2>Events Calendar</h2>
-  <div class="calendar-container">
-    <iframe
-      src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
-      width="100%" height="300" frameborder="0" scrolling="no">
-    </iframe>
+    <h2>Events Calendar</h2>
+    <div class="calendar-container">
+      <iframe
+        src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
+        style="border:solid 1px #777"
+        width="100%" height="300"
+        frameborder="0" scrolling="no">
+      </iframe>
+    </div>
+
+    <h2>Contact</h2>
+    <p>Reach out to inquire about pricing for installation work & commissions.</p>
+
+    <h2>Stay Tuned via:</h2>
+    <nav>
+      <a href="./beheresound/xur/xur.html">XUR</a> |
+      <a href="./beheresound/shwank/shwank.html">Shwank</a> |
+      <a href="./beheresound/jh/jh.html">JH</a> |
+      <a href="./beheresound/misc.html">Misc</a>
+    </nav>
+
+    <br><br>
+    <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
+    <br><br>
+
+    <a href="./blog.html">Blog</a>
   </div>
-
-  <!-- Contact -->
-  <h2>Contact</h2>
-  <p>Reach out to inquire about pricing for installation work & commissions.</p>
-
-  <!-- Links -->
-  <h2>Stay Tuned via:</h2>
-  <nav>
-    <a href="./beheresound/xur/xur.html">XUR</a> |
-    <a href="./beheresound/shwank/shwank.html">Shwank</a> |
-    <a href="./beheresound/jh/jh.html">JH</a> |
-    <a href="./beheresound/misc.html">Misc</a>
-  </nav>
-
-  <br /><br />
-
-  <!-- Footer Image -->
-  <img src="images/jeffersons.jpg" alt="Table at Jefferson's coffee" />
-
-  <br /><br />
-
-  <!-- Blog -->
-  <a href="./blog.html">Blog</a>
-
 </body>
 </html>
