--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <h1 class="title">SELECTED WORKS</h1>
     </header>
 
-    <p>View the following pieces from <em>Luke Magette</em>.</p>
+  <p class="intro-paragraph">
+    View the following pieces from <em>Luke Magette</em>.
+  </p>
 
     <h2>Video Works</h2>
     <p>
