--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
 <body>
 
-  <!-- ✅ Scaled image outside text block -->
   <div class="header-image-container">
     <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
     <p class="caption">Billboard, 2025</p>
   </div>
 
-  <!-- ✅ Begin constrained content -->
   <div class="content">
     <header>
       <h1 class="title">SELECTED WORKS</h1>
@@ -35,24 +33,36 @@
     <p>
       Brief selections below.
       <a href="./videos/index.html">Click here to view full list</a>.<br>
+    </p>
+
+    <ul>
+      <li>“AND IF NOTHING WENT WRONG” – 2024</li>
+      <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
+      <li>“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</li>
+      <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
+      <li>"SHWANKGAZE" VISUALIZER FOR SHWANK – 2024</li>
+      <li>“ORANGES” BY KIERA LYNN – 2023</li>
+      <li>FALL FASHION SHOW RECAP REEL FOR SIT FAME - 2023</li>
+    </ul>
+
+    <h2>Browse By Client</h2>
+    <p>Select a client to view full list of works.</p>
+
+    <ul>
+      <li>SOFIE LOPEZ - ARTIST</li>
+      <li>SHWANK - ARTIST</li>
+      <li>938COLLECTIVE - PRODUCTION</li>
+      <li>STEVENS INST OF TECHNOLOGY - UNIVERSITY</li>
+      <li>KIERA LYNN - ARTIST</li>
+      <li>5TWO - ARTIST</li>
+    </ul>
+
+
+    <h2>Events Calendar</h2>
       Please fill out 
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSe87m3N4u88w0FeH_OwBAfL8UxwI9EWGgatwY2uwvq9sT0oWA/viewform?usp=share_link">
         this form
       </a> to request studio time.
-    </p>
-
-    <ul>
-      <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
-      <li>“AND IF NOTHING WENT WRONG” – 2024</li>
-      <li>“ORANGES” BY KIERA LYNN – 2023</li>
-      <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
-      <li>“HOLDING ON” BY 622CHAOS – 2021</li>
-    </ul>
-
-    <h2>Selected Photography</h2>
-    <p>Click here to view full selection.</p>
-
-    <h2>Events Calendar</h2>
     <div class="calendar-container">
       <iframe
         src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&showPrint=0&src=YmVoZXJlc291bmRAZ21haWwuY29t&color=%23039be5"
