--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="header-image-container">
     <img src="BillboardHeader2.webp" alt="Billboard" class="header-img" />
-    <p class="caption">Billboard, 2025</p>
+    <p class="caption">Billboard, 2024</p>
   </div>
 
   <div class="content">
@@ -40,9 +40,9 @@
       <li>“MOOD RING” BY SOFIE LOPEZ – 2025</li>
       <li>“TAKE IT OR LEAVE” BY SOFIE LOPEZ – 2025</li>
       <li>UNTITLED MOTION GRAPHICS PROJECT – 2023</li>
-      <li>"SHWANKGAZE" VISUALIZER FOR SHWANK – 2024</li>
+      <li>"SHWANKGAZE" VISUALIZER – 2024</li>
       <li>“ORANGES” BY KIERA LYNN – 2023</li>
-      <li>FALL FASHION SHOW RECAP REEL FOR SIT FAME - 2023</li>
+      <li>FAME FASHION SHOW REEL - 2023</li>
     </ul>
 
     <h2>Browse By Client</h2>
@@ -50,11 +50,12 @@
 
     <ul>
       <li>SOFIE LOPEZ - ARTIST</li>
-      <li>SHWANK - ARTIST</li>
-      <li>938COLLECTIVE - PRODUCTION</li>
+      <li>SHWANK - BAND</li>
+      <li>938COLLECTIVE - PRODUCTION GROUP</li>
       <li>STEVENS INST OF TECHNOLOGY - UNIVERSITY</li>
       <li>KIERA LYNN - ARTIST</li>
-      <li>5TWO - ARTIST</li>
+      <li>622CHAOS - ARTIST</li>
+      <li>5TWO - LIVE PERFORMANCE</li>
     </ul>
 
 
