--- a/videos/index.html
+++ b/videos/index.html
@@ -21,35 +21,92 @@
   <!-- Page Header -->
   <header>
     <h1 class="title">VIDEO WORKS</h1>
-    <p>Browse select projects with short previews. Click any to view more.</p>
+    <p>Browse listed projects below. Click on the preview clip to watch the full video. Click on the title to learn more about the project.</p>
   </header>
 
   <!-- Begin Video Gallery Container -->
   <section class="video-gallery">
 
-    <!-- Video Block 1: MOOD RING -->
+    <!-- Video Block 1: AND IF NOTHING WENT WRONG-->
     <div class="video-preview">
       <!-- Embed small silent looping preview clip -->
-      <a href="mood-ring.html">
+      <a href="nothing-went-wrong.html">
         <video autoplay muted loop playsinline class="preview-clip">
-          <source src="../video-clips/mood-ring-preview.mp4" type="video/mp4" />
+          <source src="videos/videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
           <!-- Fallback text for unsupported browsers -->
           Your browser does not support the video tag.
         </video>
       </a>
       <!-- Title of the video work -->
-      <h2><a href="mood-ring.html">“MOOD RING” BY SOFIE LOPEZ – 2025</a></h2>
-    </div>
+     <p>    <h2><a href="nothing-went-wrong.html">"AND IF NOTHING WENT WRONG”</a></h2>
+ - 2024. PREVIEW REEL ONLY.<p>    </div>
 
-    <!-- Video Block 2: ORANGES -->
+    <!-- Video Block 2: MOOD RING -->
+    <div class="video-preview">
+      <!-- Embed small silent looping preview clip -->
+      <a href="mood-ring.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videos/videoclips/mood-ring-preview.mp4" type="video/mp4" />
+          <!-- Fallback text for unsupported browsers -->
+          Your browser does not support the video tag.
+        </video>
+      </a>
+      <!-- Title of the video work -->
+     <p>    <h3><a href="mood-ring.html">"MOOD RING”</a></h3>
+ - 2025. MUSIC VIDEO FOR SOFIE LOPEZ.<p>    </div>
+
+    <!-- Video Block 3: TAKE IT OR LEAVE -->
+    <div class="video-preview">
+      <a href="take-it.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
+        </video>
+      </a>
+     <p>    <h4><a href="take-it.html">"TAKE IT OR LEAVE”</a></h4>
+ - 2025. PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>    </div>
+
+    <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT -->
+    <div class="video-preview">
+      <a href="motion-graphics.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
+        </video>
+      </a>
+     <p>    <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT</a></h5>
+ - 2023. VIDEO WORK.<p>    </div>
+
+    <!-- Video Block 5: SHWANKGAZE -->
+    <div class="video-preview">
+      <a href="motion-graphics.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
+        </video>
+      </a>
+     <p>    <h5><a href="shwankgaze.html">"SHWANKGAZE"</a></h5>
+ - 2024. VISUALIZER FOR SHWANK.<p>    </div>
+
+    <!-- Video Block 5: ORANGES -->
     <div class="video-preview">
       <a href="oranges.html">
         <video autoplay muted loop playsinline class="preview-clip">
-          <source src="../video-clips/oranges-preview.mp4" type="video/mp4" />
+          <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
         </video>
       </a>
-      <h2><a href="oranges.html">“ORANGES” BY KIERA LYNN – 2023</a></h2>
-    </div>
+     <p>    <h6><a href="oranges.html">"ORANGES"</a></h6>
+ - 2023. MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
+
+    <!-- Video Block 5: FAME FASHION SHOW -->
+    <div class="video-preview">
+      <a href="fame.html">
+        <video autoplay muted loop playsinline class="preview-clip">
+          <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
+        </video>
+      </a>
+     <p>    <h7<a href="fame.html">"FAME FASHION SHOW REEL"</a></h7>
+ - 2023. RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>    </div>
+
+
+
 
     <!-- Add more blocks below by duplicating a <div class="video-preview">...</div> -->
 
