--- a/videos/index.html
+++ b/videos/index.html
@@ -38,8 +38,8 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <p>    <h2><a href="nothing-went-wrong.html">"AND IF NOTHING WENT WRONG”</a></h2>
- - 2024. PREVIEW REEL ONLY.<p>    </div>
+     <p>    <h2><a href="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a></h2>
+PREVIEW REEL ONLY.<p>    </div>
 
     <!-- Video Block 2: MOOD RING -->
     <div class="video-preview">
@@ -52,8 +52,8 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <p>    <h3><a href="mood-ring.html">"MOOD RING”</a></h3>
- - 2025. MUSIC VIDEO FOR SOFIE LOPEZ.<p>    </div>
+     <p>    <h3><a href="mood-ring.html">MOOD RING, 2025</a></h3>
+MUSIC VIDEO FOR SOFIE LOPEZ.<p>    </div>
 
     <!-- Video Block 3: TAKE IT OR LEAVE -->
     <div class="video-preview">
@@ -62,8 +62,8 @@
           <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h4><a href="take-it.html">"TAKE IT OR LEAVE”</a></h4>
- - 2025. PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>    </div>
+     <p>    <h4><a href="take-it.html">TAKE IT OR LEAVE, 2025</a></h4>
+PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>    </div>
 
     <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT -->
     <div class="video-preview">
@@ -72,8 +72,8 @@
           <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT</a></h5>
- - 2023. VIDEO WORK.<p>    </div>
+     <p>    <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a></h5>
+SOLO VIDEO WORK.<p>    </div>
 
     <!-- Video Block 5: SHWANKGAZE -->
     <div class="video-preview">
@@ -82,8 +82,8 @@
           <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h5><a href="shwankgaze.html">"SHWANKGAZE"</a></h5>
- - 2024. VISUALIZER FOR SHWANK.<p>    </div>
+     <p>    <h5><a href="shwankgaze.html">SHWANKGAZE, 2025</a></h5>
+VISUALIZER FOR SHWANK.<p>    </div>
 
     <!-- Video Block 5: ORANGES -->
     <div class="video-preview">
@@ -92,8 +92,8 @@
           <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h6><a href="oranges.html">"ORANGES"</a></h6>
- - 2023. MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
+     <p>    <h6><a href="oranges.html">ORANGES, 2023</a></h6>
+ MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
 
     <!-- Video Block 5: FAME FASHION SHOW -->
     <div class="video-preview">
@@ -102,8 +102,8 @@
           <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h7<a href="fame.html">"FAME FASHION SHOW REEL"</a></h7>
- - 2023. RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>    </div>
+     <p>    <h7<a href="fame.html">FAME FASHION SHOW REEL, 2023</a></h7>
+ RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>    </div>
 
 
 
