--- a/videos/index.html
+++ b/videos/index.html
@@ -38,8 +38,9 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <p>    <h2><a href="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a></h2>
-PREVIEW REEL ONLY.<p>    </div>
+     <h2><a href="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a></h2>
+PREVIEW REEL ONLY.<p>
+    </div>
 
     <!-- Video Block 2: MOOD RING -->
     <div class="video-preview">
@@ -52,8 +53,9 @@ PREVIEW REEL ONLY.<p>    </div>
         </video>
       </a>
       <!-- Title of the video work -->
-     <p>    <h3><a href="mood-ring.html">MOOD RING, 2025</a></h3>
-MUSIC VIDEO FOR SOFIE LOPEZ.<p>    </div>
+      <h3><a href="mood-ring.html">MOOD RING, 2025</a></h3>
+MUSIC VIDEO FOR SOFIE LOPEZ.<p>
+    </div>
 
     <!-- Video Block 3: TAKE IT OR LEAVE -->
     <div class="video-preview">
@@ -62,8 +64,9 @@ MUSIC VIDEO FOR SOFIE LOPEZ.<p>    </div>
           <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h4><a href="take-it.html">TAKE IT OR LEAVE, 2025</a></h4>
-PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>    </div>
+     <h4><a href="take-it.html">TAKE IT OR LEAVE, 2025</a></h4>
+PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
+    </div>
 
     <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT -->
     <div class="video-preview">
@@ -72,8 +75,9 @@ PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>    </div>
           <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a></h5>
-SOLO VIDEO WORK.<p>    </div>
+      <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a></h5>
+SOLO VIDEO WORK.<p>
+    </div>
 
     <!-- Video Block 5: SHWANKGAZE -->
     <div class="video-preview">
@@ -82,8 +86,9 @@ SOLO VIDEO WORK.<p>    </div>
           <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h5><a href="shwankgaze.html">SHWANKGAZE, 2025</a></h5>
-VISUALIZER FOR SHWANK.<p>    </div>
+     <h6><a href="shwankgaze.html">SHWANKGAZE, 2025</a></h6>
+VISUALIZER FOR SHWANK.<p>
+    </div>
 
     <!-- Video Block 5: ORANGES -->
     <div class="video-preview">
@@ -92,7 +97,7 @@ VISUALIZER FOR SHWANK.<p>    </div>
           <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h6><a href="oranges.html">ORANGES, 2023</a></h6>
+     <h6><a href="oranges.html">ORANGES, 2023</a></h6>
  MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
 
     <!-- Video Block 5: FAME FASHION SHOW -->
@@ -102,8 +107,9 @@ VISUALIZER FOR SHWANK.<p>    </div>
           <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <p>    <h7<a href="fame.html">FAME FASHION SHOW REEL, 2023</a></h7>
- RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>    </div>
+     <h6><a href="fame.html">FAME FASHION SHOW REEL, 2023</a></h6>
+ RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
+    </div>
 
 
 
