--- a/videos/index.html
+++ b/videos/index.html
@@ -38,7 +38,7 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <h2><a href="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a></h2>
+     <p class="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a>
 PREVIEW REEL ONLY.<p>
     </div>
 
@@ -53,7 +53,7 @@ PREVIEW REEL ONLY.<p>
         </video>
       </a>
       <!-- Title of the video work -->
-      <h3><a href="mood-ring.html">MOOD RING, 2025</a></h3>
+     <p class="project-title"><a href="mood-ring.html">MOOD RING, 2025</a>
 MUSIC VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
@@ -64,7 +64,7 @@ MUSIC VIDEO FOR SOFIE LOPEZ.<p>
           <source src="videos/videoclips/take-it-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <h4><a href="take-it.html">TAKE IT OR LEAVE, 2025</a></h4>
+     <p class="project-title"><a href="take-it.html">TAKE IT OR LEAVE, 2025</a>
 PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
@@ -75,7 +75,7 @@ PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
           <source src="videos/videoclips/motion-graphics-preview.mp4" type="video/mp4" />
         </video>
       </a>
-      <h5><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a></h5>
+     <p class="project-title"><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
 SOLO VIDEO WORK.<p>
     </div>
 
@@ -86,7 +86,7 @@ SOLO VIDEO WORK.<p>
           <source src="videos/videoclips/shwankgaze-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <h6><a href="shwankgaze.html">SHWANKGAZE, 2025</a></h6>
+     <p class="project-title"><a href="shwankgaze.html">SHWANKGAZE, 2025</a>
 VISUALIZER FOR SHWANK.<p>
     </div>
 
@@ -97,7 +97,7 @@ VISUALIZER FOR SHWANK.<p>
           <source src="videos/videoclips/oranges-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <h6><a href="oranges.html">ORANGES, 2023</a></h6>
+     <p class="project-title"><a href="oranges.html">ORANGES, 2023</a>
  MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
 
     <!-- Video Block 5: FAME FASHION SHOW -->
@@ -107,7 +107,7 @@ VISUALIZER FOR SHWANK.<p>
           <source src="videos/videoclips/fame-preview.mp4" type="video/mp4" />
         </video>
       </a>
-     <h6><a href="fame.html">FAME FASHION SHOW REEL, 2023</a></h6>
+     <p class="project-title"><a href="fame.html">FAME FASHION SHOW REEL, 2023</a>
  RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
     </div>
 
