--- a/videos/index.html
+++ b/videos/index.html
@@ -38,8 +38,8 @@
         </video>
       </a>
       <!-- Title of the video work -->
-     <p class="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a>
-PREVIEW REEL ONLY.<p>
+     <p class="project-title"><a href="nothing-went-wrong.html">AND IF NOTHING WENT WRONG, 2024</a>
+<p>SOLO VIDEO WORK. PREVIEW REEL ONLY.<p>
     </div>
 
     <!-- Video Block 2: MOOD RING -->
@@ -54,7 +54,7 @@ PREVIEW REEL ONLY.<p>
       </a>
       <!-- Title of the video work -->
      <p class="project-title"><a href="mood-ring.html">MOOD RING, 2025</a>
-MUSIC VIDEO FOR SOFIE LOPEZ.<p>
+<p>MUSIC VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
     <!-- Video Block 3: TAKE IT OR LEAVE -->
@@ -65,7 +65,7 @@ MUSIC VIDEO FOR SOFIE LOPEZ.<p>
         </video>
       </a>
      <p class="project-title"><a href="take-it.html">TAKE IT OR LEAVE, 2025</a>
-PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
+<p>PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
     </div>
 
     <!-- Video Block 4: UNTITLED MOTION GRAPHICS PROJECT -->
@@ -76,7 +76,7 @@ PROMOTIONAL VIDEO FOR SOFIE LOPEZ.<p>
         </video>
       </a>
      <p class="project-title"><a href="motion-graphics.html">UNTITLED MOTION GRAPHICS PROJECT, 2023</a>
-SOLO VIDEO WORK.<p>
+<p>SOLO VIDEO WORK.<p>
     </div>
 
     <!-- Video Block 5: SHWANKGAZE -->
@@ -87,7 +87,7 @@ SOLO VIDEO WORK.<p>
         </video>
       </a>
      <p class="project-title"><a href="shwankgaze.html">SHWANKGAZE, 2025</a>
-VISUALIZER FOR SHWANK.<p>
+<p>VISUALIZER FOR SHWANK.<p>
     </div>
 
     <!-- Video Block 5: ORANGES -->
@@ -98,7 +98,7 @@ VISUALIZER FOR SHWANK.<p>
         </video>
       </a>
      <p class="project-title"><a href="oranges.html">ORANGES, 2023</a>
- MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
+<p>MUSIC VIDEO FOR KIERA LYNN.<p>    </div>
 
     <!-- Video Block 5: FAME FASHION SHOW -->
     <div class="video-preview">
@@ -108,7 +108,7 @@ VISUALIZER FOR SHWANK.<p>
         </video>
       </a>
      <p class="project-title"><a href="fame.html">FAME FASHION SHOW REEL, 2023</a>
- RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
+<p>RECAP VIDEO FOR STEVENS INST OF TECHNOLOGY.<p>
     </div>
 
 
