--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AND IF NOTHING WENT WRONG – Luke M</title>
+  <link rel="stylesheet" href="../style.css" />
+
+  <!-- Open Graph (Optional) -->
+  <meta property="og:title" content="AND IF NOTHING WENT WRONG – Luke M" />
+  <meta property="og:description" content="Project video page for 'And If Nothing Went Wrong'" />
+  <meta property="og:image" content="https://luke-tm.github.io/videos/videoclips/nothing-went-wrong-preview.jpg" />
+  <meta property="og:url" content="https://luke-tm.github.io/videos/nothing-went-wrong.html" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+
+  <!-- 🔙 Navigation Links -->
+  <p><a href="/index.html">← Back to Home</a> | <a href="videos/index.html">← Back to Videos</a></p>
+
+  <!-- 🎬 Centered Video Clip -->
+  <div class="image-container">
+    <a href="https://example.com/full-video-link" target="_blank">
+      <video autoplay muted loop playsinline class="preview-clip" style="max-width: 600px; width: 100%;">
+        <source src="videoclips/nothing-went-wrong-preview.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </a>
+    <p class="caption">Click video to view full version</p>
+  </div>
+
+  <!-- 📷 Optional Photo Before Text -->
+  <div class="image-container">
+    <img src="images/nothing-went-wrong-still1.jpg" alt="Still from video" class="header-img" />
+  </div>
+
+  <!-- 📃 Description Section -->
+  <section>
+    <h1 class="title">AND IF NOTHING WENT WRONG</h1>
+    <p><strong>2024</strong> – Short Film</p>
+
+    <p><strong>Credits:</strong></p>
+    <ul>
+      <li>Directed by: Luke Magette</li>
+      <li>Edited by: Jane Doe</li>
+      <li>Shot on location in New York City</li>
+    </ul>
+
+    <p><strong>Description:</strong></p>
+    <p>
+      This short visual piece explores the rhythm of digital memory and fragility in daily routine.
+      Inspired by silent cinema and contemporary glitch art, it presents a looping vignette rooted in improvisation and found footage.
+    </p>
+  </section>
+
+  <!-- 📷 Optional Photo After Text -->
+  <div class="image-container">
+    <img src="images/nothing-went-wrong-still2.jpg" alt="Another still from the project" class="header-img" />
+  </div>
+
+</body>
+</html>
 
