--- a/videos/nothing-went-wrong/nothing-went-wrong.html
+++ b/videos/nothing-went-wrong/nothing-went-wrong.html
@@ -27,7 +27,7 @@
         Your browser does not support the video tag.
       </video>
     </a>
-    <p class="caption">Click video to view full version</p>
+    <p class="caption">Click video to view preview reel</p>
   </div>
 
   <!-- 📷 Optional Photo Before Text -->
@@ -38,19 +38,24 @@
   <!-- 📃 Description Section -->
   <section>
     <h1 class="title">AND IF NOTHING WENT WRONG</h1>
-    <p><strong>2024</strong> – Short Film</p>
+    <p><strong>2024</strong> – Long Form Solo Video Effort</p>
 
-    <p><strong>Credits:</strong></p>
-    <ul>
-      <li>Directed by: Luke Magette</li>
-      <li>Edited by: Jane Doe</li>
-      <li>Shot on location in New York City</li>
-    </ul>
+    <p><strong>Credits</strong></p>
+      <li>Debuted at YES GALLERY's "I Will Remember This Dream Of Gentleness" exhibition. April 27 2024.</li>      
+      <p></p>
+      <li>Shot, dir, edit – Luke Magette.</li>
+      <li>Featuring Cameron Clifford.</li>
+      <li></li>
+      <li>Special thanks to Ryan Aasen.</li>      
+      <li></li>      
 
-    <p><strong>Description:</strong></p>
+    <p><strong>More Info</strong></p>
     <p>
-      This short visual piece explores the rhythm of digital memory and fragility in daily routine.
-      Inspired by silent cinema and contemporary glitch art, it presents a looping vignette rooted in improvisation and found footage.
+      </li>Full-length runtime - 1:20:01.</li>
+      </li>Recorded live on a mix of security cameras & camcorders. Edited with Final Cut Pro for Mac.</li>
+      </li>Shot on location in Hoboken, NJ.</li>
+      <p></p>    
+      </li>Inquire further for installation details & to view full-length project.</li>
     </p>
   </section>
 
